CHANGELOG 1.4.1

( Bug Fixing/Tweaks )
- Tweaked the frequency of the coup events

( Map )
- Map rework for Germany

( Content )
- Political rework for Jordan