@@ -19,6 +19,13 @@ international_organizations = {
 				owns_state = 1150
 				owns_state = 811
 			}
+			if = {
+				limit = {
+					original_tag = WES
+				}
+				owns_state = 699
+				owns_state = 882
+			}
 		}
 		
 		icon = united_nations
