@@ -21,21 +21,21 @@ state_categories={
 	
 	state_level_2 = {
 		local_building_slots = 6
-		color = { 240 60 0 }
+		color = { 240 120 0 }
 	}
 	
 	state_level_3 = {
 		local_building_slots = 11
-		color = { 240 120 0 }
+		color = { 200 200 0 }
 	}
 	
 	state_level_4 = {
 		local_building_slots = 16
-		color = { 240 190 0 }
+		color = { 0 200 0 }
 	}
 	
 	state_level_5 = {
 		local_building_slots = 21
-		color = { 240 240 0 }
+		color = { 0 200 200 }
 	}
 }
