@@ -56,27 +56,11 @@
  SET_CAPITAL_TT: "Requirements to set your Capital here:\n- The State is §Yowned§! by you\n- The State is §Ycontrolled§! by you\n- The State is your §YCore§!\n- The State §Ydoes not contain your current Capital§!\n- You have §Y500 political power§!"
 
  # State Categories
- state_military_base: "Military Base"
- nuclear_wasteland: "Nuclear Wasteland"
+ state_nuclear_wasteland: "Nuclear Wasteland"
+ state_default: "Default"
  state_level_0: "Level 0"
  state_level_1: "Level 1"
  state_level_2: "Level 2"
  state_level_3: "Level 3"
  state_level_4: "Level 4"
  state_level_5: "Level 5"
- state_level_6: "Level 6"
- state_level_7: "Level 7"
- state_level_8: "Level 8"
- state_level_9: "Level 9"
- state_level_10: "Level 10"
- state_level_11: "Level 11"
- state_level_12: "Level 12"
- state_level_13: "Level 13"
- state_level_14: "Level 14"
- state_level_15: "Level 15"
- state_level_16: "Level 16"
- state_level_17: "Level 17"
- state_level_18: "Level 18"
- state_level_19: "Level 19"
- state_level_20: "Level 20"
- state_level_21: "Level 21"
