@@ -1,7 +1,11 @@
 CHANGELOG 1.4.1
 
+( Major )
+- Directly linked building slots to infrastructure level
+
 ( Bug Fixing/Tweaks )
 - Tweaked the frequency of the coup events
+- SADR/Western Sahara now needs to control the Moroccan part as well in order to apply to the United Nations
 
 ( Map )
 - Map rework for Germany
